module1-nodeport/lab2-ingress/01-deployment-hello-world.yaml
# f5-hello-world app (lab 1.2 / 1.3 - identical deployment)
apiVersion: apps/v1
kind: Deployment
metadata:
  name: f5-hello-world-web
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: f5-hello-world-web
  template:
    metadata:
      labels:
        app: f5-hello-world-web
    spec:
      containers:
        - name: f5-hello-world-web
          image: nginxdemos/nginx-hello
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
