module1-nodeport/lab2-ingress/02-nodeport-service-hello-world.yaml
# NodePort service (lab 1.2 / 1.3 - identical service)
# The cis.f5.com/as3-* labels drive AS3 ConfigMap service discovery (lab 1.3).
# They are inert in the Ingress flow (lab 1.2) but harmless if left in.
apiVersion: v1
kind: Service
metadata:
  name: f5-hello-world-web
  namespace: default
  labels:
    app: f5-hello-world-web
    cis.f5.com/as3-tenant: AS3
    cis.f5.com/as3-app: A1
    cis.f5.com/as3-pool: web_pool
spec:
  type: NodePort
  selector:
    app: f5-hello-world-web
  ports:
    - name: f5-hello-world-web
      port: 8080
      targetPort: 8080
      protocol: TCP
